aws/manifest/cic-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cic-k8s-ingress-controller-primary
spec:
  selector:
    matchLabels:
      app: cic-k8s-ingress-controller
  replicas: 1
  template:
    metadata:
      name: cic-k8s-ingress-controller
      labels:
        app: cic-k8s-ingress-controller
      annotations:
    spec: 
      serviceAccountName: cic-k8s-role
      containers:
      - name: cic-k8s-ingress-controller
        image: "117940112483.dkr.ecr.us-east-1.amazonaws.com/9893a514-39ef-47cd-b1df-24312ff2c810/cg-1706352000/quay.io/citrix/citrix-k8s-ingress-controller:1.2.0-latest"
        args:
          - --ingress-classes
            citrix
          - --feature-node-watch
            false
        imagePullPolicy: Always

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cic-k8s-ingress-controller-secondary
spec:
  selector:
    matchLabels:
      app: cic-k8s-ingress-controller
  replicas: 1
  template:
    metadata:
      name: cic-k8s-ingress-controller
      labels:
        app: cic-k8s-ingress-controller
      annotations:
    spec: 
      serviceAccountName: cic-k8s-role
      containers:
      - name: cic-k8s-ingress-controller
        image: "117940112483.dkr.ecr.us-east-1.amazonaws.com/9893a514-39ef-47cd-b1df-24312ff2c810/cg-1706352000/quay.io/citrix/citrix-k8s-ingress-controller:1.2.0-latest"
        args:
          - --ingress-classes
            citrix
          - --feature-node-watch
            false
        imagePullPolicy: Always
