aws/manifest/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: guestbook-ingress
  annotations:
   kubernetes.io/ingress.class: "citrix"
   ingress.citrix.com/frontend-ip: "x.x.x.x"
spec:
  rules:
  - host:  guestbook.citrix.com
    http:
      paths:
      - path: /
        backend:
          serviceName: frontend
          servicePort: 80
